// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`review screen e2e initial render: progress strip + first record + primary prediction 1`] = `
"                                                                                                    
  LabelLens · tiny.jsonl · Pending · 1 / 10             Reviewed: 0 / 10 · Skipped: 0 · Pending: 10 
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  │ Uber ride to airport                                                                            
  │ Amazon order #12345                                                                             
  │ Netflix monthly                                                                                 
  │ Salary credit October                                                                           
                                                                                                    
  src llm:gpt-4   →   food  (92%)                                                                   
                                                                                                    
  1 food >                                                                                          
  2 travel                                                                                          
  3 other                                                                                           
                                                                                                    
  a accept   r relabel   x reject   s skip   m mark   n note   u undo   j next   k prev   [ prev    
 queue   ] next queue   q quit                                                                      
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' writes an accepted review row and advances counter 1`] = `
"                                                                                                    
  LabelLens · tiny.jsonl · Pending · 1 / 9               Reviewed: 1 / 10 · Skipped: 0 · Pending: 9 
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  │ Amazon order #12345                                                                             
  │ Netflix monthly                                                                                 
  │ Salary credit October                                                                           
                                                                                                    
  src llm:gpt-4   →   travel  (88%)                                                                 
                                                                                                    
  1 food                                                                                            
  2 travel >                                                                                        
  3 other                                                                                           
                                                                                                    
  history: 21b86d + food                                                                            
  a accept   r relabel   x reject   s skip   m mark   n note   u undo   j next   k prev   [ prev    
 queue   ] next queue   q quit                                                                      
                                                                                                    
"
`;

exports[`review screen e2e pressing 'j' moves to the next record without writing a review 1`] = `
"                                                                                                    
  LabelLens · tiny.jsonl · Pending · 2 / 10             Reviewed: 0 / 10 · Skipped: 0 · Pending: 10 
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  │ Lunch at Zomato Bangalore                                                                       
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  │ Amazon order #12345                                                                             
  │ Netflix monthly                                                                                 
  │ Salary credit October                                                                           
  │ Rent transfer to landlord                                                                       
                                                                                                    
  src llm:gpt-4   →   travel  (88%)                                                                 
                                                                                                    
  1 food                                                                                            
  2 travel >                                                                                        
  3 other                                                                                           
                                                                                                    
  a accept   r relabel   x reject   s skip   m mark   n note   u undo   j next   k prev   [ prev    
 queue   ] next queue   q quit                                                                      
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' across all records empties pending and shows completion 1`] = `
"                                                                                                    
  LabelLens · tiny.jsonl · Pending · 0 / 0              Reviewed: 10 / 10 · Skipped: 0 · Pending: 0 
                                                                                                    
                                                                                                    
                                                                                                    
   All records reviewed. Press q to quit.                                                           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  history: fee815 + ENTRY_START  ·  411293 + food  ·  7c11c2 + other  ·  f207ce + food  ·  bf0403   
 + rent                                                                                             
  a accept   r relabel   x reject   s skip   m mark   n note   u undo   j next   k prev   [ prev    
 queue   ] next queue   q quit                                                                      
                                                                                                    
"
`;
